@@ -19,7 +19,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine}
+            @{argLine} -Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails
             --add-reads org.eclipse.jetty.client=javax.servlet.api
             --add-modules java.security.jgss
             --add-modules javax.servlet.api
